# GRAPHIS

./: .gitignore  Graphis_pyinstaller.spec  environment.yml  files_rc.py  graffilabel.config  graffilabel.py  graffilabel_new.conf  graffilabel_old.config  graphis.config  graphis.py  iptc_region_role.csv  pyproject.toml  readme.md  requirements.txt  user.pickle
.github/ISSUE_TEMPLATE/: bug_report.md
app/: ThirdPartyNotices.json  colorbutton.py  createDb.py  db_handler.py  digitizerscene.py  digitizerview.py  files.qrc  gui_about.ui  gui_main.ui  gui_main_va.ui  gui_user.ui  image_loader.py  itemsGrahpicScene.py  json_model.py  json_model_viewer.py  meta_exif.py  plaintexteditfocusevents.py  popup_about.py  popup_user.py  preview_class.py  spinningwaiter.py  ui_about.py  ui_main.py  ui_user.py  var_classes.py
licenses_modules/: QtWaitingSpinner.txt
