[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "GRAPHIS"
version = "2.2"
authors = [
  { name="Martin Wieser"},
]
description = "A package to work with IPTC region in images"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3.10",
	"Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: OS Independent",
    "Development Status :: 3 - Alpha"
]

dependencies = [
    'numpy>=1.24.2',
	'shapely>=2.0.1',
	'Pillow>=9.4.0',
	'rawpy>=0.18.0',
	'PySide6>=6.6.2',
	'PySide6_Essentials>=6.6.2',
	'PySide6_Addons>=6.6.2',
	'PyExifTool>=0.5.5']


[project.urls]
    "Homepage" = "https://github.com/GraffitiProjectINDIGO/GRAPHIS"
    "Bug Tracker" = "https://github.com/GraffitiProjectINDIGO/GRAPHIS/issues"


[project.scripts]
graphis = "graphis.main:run"